--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.20.4",
 		"@tailwindcss/typography": "^0.5.9",
+		"@typescript-eslint/eslint-plugin": "^6.1.0",
+		"@typescript-eslint/parser": "^6.1.0",
 		"autoprefixer": "^10.4.14",
 		"daisyui": "^3.2.1",
 		"eslint": "^8.28.0",
